--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/JoseLuisMonroy/PracticaJS_xlsx#readme",
   "dependencies": {
+    "fs-extra": "^10.1.0",
     "jest": "^29.0.3",
     "xlsx": "^0.18.5"
   }
